feat: adiciona sala privada protegida
